[metadata]
name = SparkMLTransforms
author = Tianle Chen
author_email = tianlechen@gmail.com
description = Transformations in Spark for ML Features
long_description = file: README.md
long_description_content_type = text/markdown
url = https://https://github.com/tianle91/spark-ml-transforms
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    pyspark >= 3.2
    pandas >= 1.5
    SpaceTimePandas >= 0.3.3
    xgboost >= 1.7
python_requires = >=3.7
use_scm_version = True
setup_requires =
    setuptools_scm

[options.packages.find]
exclude =
    tests

[flake8]
ignore =
    E133, # closing bracket is missing indentation
    W503, # line break before binary operator
    E501, # line too long
exclude =
    __init__.py,
    sample/*,
max-line-length = 100
